.debug/err_clean_antigravity.txt

























































































































































































































error[E0596]: cannot borrow `body` as mutable, as it is not declared as mutable
   --> crates\nl_llm_new\src\provider\antigravity\provider.rs:209:28
    |
209 |         if let Some(obj) = body.as_object_mut() {
    |                            ^^^^ cannot borrow as mutable
    |
help: consider changing this to be mutable
    |
200 |     async fn complete(&self, mut body: serde_json::Value) -> crate::Result<LlmResponse> {
    |                              +++


error[E0596]: cannot borrow `body` as mutable, as it is not declared as mutable
   --> crates\nl_llm_new\src\provider\antigravity\provider.rs:258:28
    |
258 |         if let Some(obj) = body.as_object_mut() {
    |                            ^^^^ cannot borrow as mutable
    |
help: consider changing this to be mutable
    |
248 |         mut body: serde_json::Value,
    |         +++


For more information about this error, try `rustc --explain E0596`.

